# devenv-python-alternative

./: .envrc  .gitignore  Makefile  README.md  devenv.nix  devenv.yaml  pyproject.toml  requirements.in  requirements.txt
